--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">KlayQuizzonificationSoftwareExcellentTime</string>
     <string name = "mainTitle">The Quizzening is upon you!</string>
     <string name = "explanation">This is a short, underwhelming quizz about cultural junk the
-    creator Klay likes.  Its mostly old stuff from the early 2000's no one cares about anymore.
+    creator Klay likes.  Its mostly old stuff from the early 2000\'s no one cares about anymore.
     Hooray! Time is slowly killing me!</string>
     <string name = "beginButton">QUIZZ GO!!</string>
 </resources>
